--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -7,7 +7,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.page-title {
+  margin-left: 35px;
+  font-size: 2em;
+  color: #3f3f41;
+  font-weight: 600;
 }
