--- a/src/style/account-creation.scss
+++ b/src/style/account-creation.scss
@@ -10,6 +10,7 @@
 .creation-form {
     display: grid;
     justify-content: center;
+    align-content: center;
     padding-top: 10px;
     width: 80%;
     justify-self: center;
@@ -47,14 +48,17 @@
 }
 
 .creation-form-middle-border {
-    height: 50px;
+    height: 75%;
     border-top: 2px solid blue;
     padding: 5px;
     grid-row: e;
     grid-column: s/e;
     border-bottom: 2px solid blue;
     display: grid;
-    justify-items: center;
+    
+    p {
+        text-align: center;
+    }
 }
 
 .creation-form__bank-account-info {
