--- a/src/style/account-creation.scss
+++ b/src/style/account-creation.scss
@@ -104,7 +104,7 @@
     grid-column: s/e;
     justify-items: center;
 
-    input {
+    .form-button__button {
         width: 50%;
         height: 20px;
         border: 1px solid grey;
