removed placeholder from password in login form, also edited styles for not found page; made the link text larger and added hover effect. moved history push to the try catch block instead of before it.

--- a/src/style/no-match.scss
+++ b/src/style/no-match.scss
@@ -18,7 +18,12 @@
     a {
         margin-top: 10px;
         justify-self: center;
+        font-size: 24px;
         text-decoration: none;
         color: white;
+
+        &:hover {
+            color:blue ;
+        }
     }
 }
