changed account recovery title to a h2 tag, started on the link for password recover, and began styles for page.

--- a/src/style/account-login.scss
+++ b/src/style/account-login.scss
@@ -11,4 +11,12 @@
 .login-form-wrapper {
     display: flex;
     justify-content: space-evenly;
+    width: 100%;
+
+    .login-form {
+        display: grid;
+        justify-content: center;
+        align-content: center;
+        width: 40%;
+    }
 }
