--- a/src/style/account-login.scss
+++ b/src/style/account-login.scss
@@ -10,13 +10,93 @@
 
 .login-form-wrapper {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    align-content: center;
     width: 100%;
+    height: 500px;
 
     .login-form {
         display: grid;
         justify-content: center;
         align-content: center;
+        justify-self: center;
         width: 40%;
+        box-shadow: 1px 1px 1px 2px grey;
+        grid-template-columns: [s] 1fr 1fr [e];
+        
+        &__email, &__password {
+            display: flex;
+            font-size: 1rem;
+            font-weight: 500;
+            font-style: italic;
+            align-items: center;
+            justify-content:center;
+            height: 50%;
+            width: 100%;
+            padding-top: 5px;
+            padding-bottom: 5px;
+            border-bottom: 2px solid blue;
+    
+            input {
+                height: 15px;
+                border: none;
+                box-shadow: 2px 2px 5px grey;
+            }
+        }
+
+        label {
+            margin-right: 5px;
+        }
+
+        .login-button {
+            display: grid;
+            padding: 6px;
+            grid-column: s/e;
+            justify-items: center;
+        
+            .form-button__button {
+                width: 50%;
+                height: 40px;
+                background-color: darkred;
+                color: white;
+                border: 1px solid grey;
+        
+                &:hover {
+                    transition: .5s;
+                    height: 40px;
+                    width: 35%;
+                    border: 2px transparent;
+                    background-color: darkblue;
+                    
+                }
+            }
+        }
+    }
+    
+    .login-page-help-link-wrapper {
+        display: flex;
+        flex-direction: column;
+        width: 40%;
+        height: 100%;
+        align-content: center;
+        
+
+        h2{
+            justify-self: center;
+            align-self: center;
+        }
+    }
+}
+
+.help-link {
+    display: grid;
+    text-decoration: none;
+    align-self: center;
+    color: blue;
+    height: 15px;
+    margin-bottom: 5px;
+
+    &:hover {
+        color: darkblue;
     }
 }
