--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,11 +1,19 @@
 body {
   margin: 0;
+  display: grid;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  .app-container {
+    display: grid;
+  }
 }
+
+.page-container {
+  display: grid;
 
 .page-title {
   margin-left: 35px;
@@ -13,4 +21,6 @@ body {
   color: #3f3f41;
   font-weight: 600;
   justify-content: center;
+  justify-self: center;
+}
 }
