--- a/src/style/shop-content.scss
+++ b/src/style/shop-content.scss
@@ -21,8 +21,9 @@
     }
 }
 
-.shop-content-wrapper {
-  
+.shop-content-container {
+  display: grid;
+  justify-items: center;
   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   grid-column-gap: 25px;
   grid-row-gap: 40px;
@@ -30,8 +31,8 @@
 
 .product-card {
     display: grid;
-    grid-template-rows: 1/-1;
-    grid-template-columns: 1/-1;
+    // grid-template-rows: 1/-1;
+    // grid-template-columns: 1/-1;
   
     & > * {
       grid-row: 1/-1;
@@ -65,6 +66,8 @@
     display: grid;
     justify-items: center;
     align-items: center;
+    border: red;
+    border-radius: 2em;
   
     &__title, &__instock-quanity {
       color: #333333;
@@ -79,21 +82,13 @@
     box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.1);
   
     display: grid;
-    grid-template-rows: 15px [title-s] 30px [title-e description-s] 1fr [description-e price-s] 25px [price-e footer-s] 65px [footer-e] 10px;
+    grid-template-rows: 5px [title-s] 30px [title-e description-s] 1fr [description-e price-s] 25px [price-e footer-s] 65px [footer-e] 10px;
     grid-template-columns: 15px [s] 1fr [e] 20px;
     justify-items: start;
     grid-row-gap: 7px;
   
     & > * {
       grid-column: s/e;
-    }
-  
-    &__title {
-      color: #00cb79;
-      font-family: "Encode Sans Condensed";
-      font-size: 16px;
-      font-weight: 500;
-      grid-row: title-s/title-e;
     }
   
     &__description {
