In middle of adding login functionallity and home page changes based on that, currently hompage part of the website throws an error and is not accessable

--- a/src/style/navigation-bar.scss
+++ b/src/style/navigation-bar.scss
@@ -20,7 +20,7 @@
       height: 100%;
       display: flex;
       margin-right: 10px;
-      font-size: 1.2rem;
+      font-size: 1.5rem;
       
     }
   
@@ -34,6 +34,7 @@
   
     a {
       margin: 10px;
+      font-size: 20px;
       text-decoration: none;
       color: white;
   
