--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -18,7 +18,7 @@ body {
 .page-title {
   margin-left: 35px;
   font-size: 2em;
-  color: #3f3f41;
+  // color: #3f3f41;
   font-weight: 600;
   justify-content: center;
   justify-self: center;
